--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Distance Metrics\n",
+    "###### Distance Metrics\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -154,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
